# cloud-clip-lite

./: .dockerignore  .env.example  .gitignore  Caddyfile.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
clients/cli/: README.md
clients/desktop/: README.md
clients/mobile/: README.md
clients/rust/: Cargo.toml  README.md
clients/rust/src/: api.rs  app.rs  config.rs  main.rs  models.rs  ws.rs
clients/rust/src/views/: clipboard.rs  history.rs  login.rs  mod.rs  server.rs  settings.rs
cmd/server/: main.go
docs/: iphone-shortcuts.md
internal/api/: admin.go  admin_test.go  api_test.go  auth.go  clip.go  clip_test.go  devices.go  me.go  responses.go  server.go  server_test.go
internal/auth/: jwt.go  jwt_test.go  password.go  password_test.go  token.go  token_test.go
internal/blob/: blob.go  key.go  local.go  local_test.go  mime.go  mime_test.go
internal/config/: config.go  config_test.go
internal/db/: db.go
internal/health/: health.go  health_test.go
internal/logger/: logger.go
internal/metrics/: metrics.go  metrics_test.go
internal/middleware/: auth.go  auth_test.go  middleware.go  ratelimit.go  ratelimit_test.go
internal/migrate/: migrate.go  migrations_0001.go  migrations_0002.go
internal/scheduler/: scheduler.go  scheduler_test.go
internal/store/: admin.go  audit.go  audit_test.go  clip_items.go  clip_items_test.go  crud_test.go  devices.go  invites.go  store.go  store_test.go  tokens.go  users.go
internal/ws/: connection.go  handler.go  handler_test.go  hub.go  (+2 more)
web/: index.html  package-lock.json  package.json
(+20 files in other folders)
