[package]
name = "cloud-clip-client"
version = "0.1.0"
edition = "2021"
description = "Cross-platform desktop client for Cloud Clip Lite"
license = "MIT"

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System clipboard
arboard = "3"

# Platform directories
dirs = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
futures-util = "0.3"
rfd = "0.15"
urlencoding = "2"
image = { version = "0.25", features = ["png", "jpeg"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
